add processed report func and some require func(blind, delete, etc)
