# src/routes/report/report.ctrl.js
@@ -1,4 +1,4 @@
-import { reportDAO } from '../../DAO'
+import { reportDAO, userDAO, boardDAO, replyDAO, feedbackDAO, notificationDAO } from '../../DAO'
 import { apiErrorGenerator } from '../../lib/apiErrorGenerator'
 import { apiResponser } from '../../lib/middleware/apiResponser'
 import { parseIntParam } from '../../lib/parseParams'
@@ -35,7 +35,7 @@ export const getReportLogs = async (req, res, next) => {
     const page = await parseIntParam(req.query.page, 20)
     let data
     try{
-        data = await reportDAO.getReportLogs(size, page)
+        data = await reportDAO.getReportLogs(size, page, req.query.isCopyright)
     } catch(e) {
         return next(apiErrorGenerator(500, 'error get reportLog'))
     }
@@ -45,12 +45,22 @@ export const getReportLogs = async (req, res, next) => {
 }
 
 export const deleteReportAndCreateLog = async (req, res, next) => {
-    const { reportData } = req.body
+    const { contentId, contentType, reportType, reportStatus, suspectUserId } = req.body
+    const parsedReportStatus = await parseIntParam(reportStatus, 3)
     let data
     try {
-        data = await reportDAO.deleteProcessedReport(reportData)
+        const result = await processReport(contentId, contentType, parsedReportStatus, suspectUserId)
+        data = await reportDAO.deleteProcessedReport(contentId, contentType, reportType, parsedReportStatus, result.contentStatus)
+            await notificationDAO.makeNotification({
+              targetUserId: suspectUserId,
+              maker: req.user.id,
+              notificationType: 'Notice',
+              targetType: contentType,
+              targetInfo: contentId,
+              message: result.message
+            })
     } catch(e) {
-        return next(apiErrorGenerator(500, 'error delete report and create report log', e))
+        return next(apiErrorGenerator(500, 'error when delete report and create report log', e))
     }
     
     return apiResponser({req, res, statusCode: 201, data, message: 'success delete and create log'})
@@ -102,4 +112,73 @@ export const postCopyrightReport = async (req, res, next) => {
         data: reportData, 
         message: 'success'
     })
+}
+
+const processReport = async (contentId, contentType, reportStatus, suspectUserId) => {
+    const result = {
+        status: reportStatus
+    }
+    try {
+        if (reportStatus === 0) {
+            switch (contentType) {
+                case 'Board':
+                    result.data = await boardDAO.deleteBoard(contentId)
+                    break
+                case 'Feedback':
+                    result.data = await feedbackDAO.deleteById(contentId)
+                    break
+                case 'Reply':
+                    result.data = await replyDAO.deleteById(contentId)
+                    break
+                default:
+                    break
+            }
+            result.message = '컨텐츠 삭제처리 됨'
+            result.contentStatus = 0
+        } else if (reportStatus === 1 || reportStatus === 2) {
+            switch (contentType) {
+                case 'Board':
+                    result.data = await boardDAO.setBlind(contentId)
+                    break
+                case 'Feedback':
+                    result.data = await feedbackDAO.setBlind(contentId)
+                    break
+                case 'Reply':
+                    result.data = await replyDAO.setBlind(contentId)
+                    break
+                default:
+                    break
+            }
+            result.userData = reportStatus === 1 ? await userDAO.deactiveUser(suspectUserId) : await userDAO.deleteUser(suspectUserId)
+            result.message = `회원 ${reportStatus === 1 ? '정지' : '탈퇴'}처리 및 컨텐츠 비공개처리 완료`
+            result.contentStatus = 1
+        } else {
+            result.data = null
+            result.message = '처리 반려됨'
+            result.contentStatus = 2
+        }
+    } catch (e) {
+        throw new Error(`error in report processing ${e}`)
+    }
+
+    return result
+}
+
+export const unsetBlind = async (contentId, contentType) => {
+    const result = {
+
+    }
+    switch (contentType) {
+        case 'Board':
+            result.data = await boardDAO.unsetBlind(contentId)
+            break
+        case 'Feedback':
+            result.data = await feedbackDAO.unsetBlind(contentId)
+            break
+        case 'Reply':
+            result.data = await replyDAO.unsetBlind(contentId)
+            break
+        default:
+            break
+    }
 }
